--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.main.web-application-type=NONE
 spring.main.banner-mode=off
 
-rest.api.base.url=https://quoters.apps.pcfone.io/api/random
+# rest.api.base.url=https://quoters.apps.pcfone.io/api/random
+rest.api.base.url=https://jsonplaceholder.typicode.com
 
 azure.storage.accountName=sasmashantd
 azure.storage.container-name=assets-images
