--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,21 @@
 spring.main.web-application-type=NONE
 spring.main.banner-mode=off
 
+# Source REST API configs
 # rest.api.base.url=https://quoters.apps.pcfone.io/api/random
 rest.api.base.url=https://jsonplaceholder.typicode.com
 
 azure.storage.accountName=sasmashantd
 azure.storage.container-name=assets-images
 azure.storage.accountKey=${AZURE_STORAGE_ACCOUNT_KEY}
+
+## Kafka common configs 
+spring.kafka.properties.sasl.mechanism=PLAIN
+spring.kafka.properties.bootstrap.servers=${BOOTSTRAP_SERVERS}
+spring.kafka.properties.sasl.jaas.config=${SASL_JAAS_CONFIG}
+spring.kafka.properties.security.protocol=SASL_SSL
+
+# Producer configuration
+spring.kafka.producer.client-id=user-producer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
